chore: small fix to remove extra spaces on the first step

--- a/frontend/src/assets/styles/global.scss
+++ b/frontend/src/assets/styles/global.scss
@@ -431,7 +431,7 @@ div#app {
 
 .content {
   flex-grow: 1;
-  align-self: stretch;
+  align-self: flex-start;
   display: flex;
   flex-direction: column;
   gap: 3rem;
